# conduit-ETL

./: .gitignore  LICENSE  Makefile  PLAN.md  README.md  conduit.spec  deno.json  main.ts  mod.ts  pipeline.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html
examples/: simple_pipeline.yaml
src/conduit/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/conduit/engine/: extract.py  transform.py
src/conduit/loader/: __init__.py  bigquery_loader.py  csv_loader.py  json_loader.py  mongodb_loader.py  mysql_loader.py  parquet_loader.py  postgres_loader.py  s3_loader.py  snowflake_loader.py
src/conduit/validation/: models.py  reporter.py  runner.py  validators.py
src/ts/: cli.ts  config.ts  daemon.ts  init.ts  models.ts  pipeline.ts  util.ts
src/ts/engine/: extract.ts  transform.ts
src/ts/loader/: bigquery_loader.ts  csv_loader.ts  json_loader.ts  mod.ts  mongodb_loader.ts  mysql_loader.ts  parquet_loader.ts  postgres_loader.ts  s3_loader.ts  snowflake_loader.ts
src/ts/normalize/: mod.ts  query.ts  register.ts  session.ts
src/ts/validation/: models.ts  reporter.ts  runner.ts  validators.ts
tests/: conftest.py  test_config.py  test_pipeline.py  test_transform.py  test_validation.py
tests/fixtures/: orders.csv  regions.csv  sample_pipeline.yaml
tests/ts/: config_test.ts  daemon_test.ts  init_test.ts  pipeline_test.ts  transform_test.ts  validation_test.ts
tests/ts/fixtures/: helpers.ts  orders.csv  regions.csv
tests/ts/normalize/: query_test.ts  register_test.ts  session_test.ts
tests/ts/validation/: report_test.ts  runner_test.ts  validators_test.ts
(+19 files in other folders)
