[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conduit-etl"
version = "0.1.0"
description = "Local-first ELT workbench for data engineers"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mysql = ["pymysql>=1.1"]
snowflake = ["snowflake-connector-python[pandas]>=3.0"]
bigquery = ["google-cloud-bigquery>=3.0", "pandas>=2.0"]
mongodb = ["pymongo>=4.0"]
all-destinations = [
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "snowflake-connector-python[pandas]>=3.0",
    "google-cloud-bigquery>=3.0",
    "pymongo>=4.0",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
conduit = "conduit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/conduit"]
